--- a/Spielwiese/WebContent/test.xhtml
+++ b/Spielwiese/WebContent/test.xhtml
@@ -4,18 +4,12 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets" 
     xmlns:p="http://primefaces.org/ui">
+    
+   
    <ui:define name="title">Test</ui:define>
 
     <ui:define name="content">
-		<p:dataTable  value="#{ArticleManagedBean.clusterList}" var="clusterList">
-    		<p:column>
-    		 <details>
-      		   <summary>
-      		     <h:outputText value="#{clusterList.topArticle.title}"></h:outputText>
-    		   </summary>
-    		 </details>
-    		</p:column>
-		</p:dataTable>
+		TEST
    	</ui:define>
    	
 </ui:composition>
