--- a/Spielwiese/WebContent/header.xhtml
+++ b/Spielwiese/WebContent/header.xhtml
@@ -6,7 +6,7 @@
     xmlns:p="http://primefaces.org/ui">
 
   <ul id="nav">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.xhtml">Home</a></li>
     <li><a href="test.xhtml">Test</a></li>
   </ul>
 
