--- a/Spielwiese/WebContent/masterTemplate.xhtml
+++ b/Spielwiese/WebContent/masterTemplate.xhtml
@@ -14,6 +14,7 @@
     <ui:include src="header.xhtml"/>
 
     <h:body>
+   		<link type="text/css" rel="stylesheet" href="/Spielwiese/resources/css/style.css" />
         <ui:insert name="content" />
     </h:body>
 
