Richtig saubere Lösung für die Bean, ClusterWrapper ist damit unnötig und wurde gelöscht. Relative Links für CSS und Bild gesetzt. Ich bin so glücklich! <3
TODO: Suche

--- a/Spielwiese/WebContent/equalArticles.xhtml
+++ b/Spielwiese/WebContent/equalArticles.xhtml
@@ -4,11 +4,11 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets" 
     xmlns:p="http://primefaces.org/ui">
-   
-    <ui:define name="title">Ähnliche Artikel</ui:define>
-	
+    
+    <ui:define name="title">Gleiche Artikel</ui:define>
+
     <ui:define name="content">
-       <f:event type="preRenderView" listener="#{amb.onPageLoadIndex}"/>
+       <f:event type="preRenderView" listener="#{amb.onPageLoadEqualArticles}"/>
        <h:body>
 		<h:dataTable  value="#{amb.clusterList}" var="cluster">
     		<h:column>
