--- a/Spielwiese/WebContent/header.xhtml
+++ b/Spielwiese/WebContent/header.xhtml
@@ -6,8 +6,9 @@
     xmlns:p="http://primefaces.org/ui">
 
   <ul id="nav">
-    <li><a href="index.xhtml">Home</a></li>
-    <li><a href="test.xhtml">Test</a></li>
+    <li><a href="index.xhtml">Ähnliche Artikel</a></li>
+    <li><a href="equalArticles.xhtml">Gleiche Artikel</a></li>
+    <li><a href="search.xhtml">Suche</a></li>
   </ul>
 
 </html>
