--- a/Spielwiese/WebContent/masterTemplate.xhtml
+++ b/Spielwiese/WebContent/masterTemplate.xhtml
@@ -12,11 +12,8 @@
     </h:head>
 
     <ui:include src="header.xhtml"/>
-
-    <h:body>
-   		<link type="text/css" rel="stylesheet" href="/Spielwiese/resources/css/style.css" />
-        <ui:insert name="content" />
-    </h:body>
+	<link type="text/css" rel="stylesheet" href="resources/css/style.css" />
+    <ui:insert name="content" />
 
     <ui:include src="footer.xhtml"/>
 
