Kleiner Fehler in der web.xml in bezug auf relative Links behoben.

--- a/Spielwiese/WebContent/masterTemplate.xhtml
+++ b/Spielwiese/WebContent/masterTemplate.xhtml
@@ -12,7 +12,7 @@
     </h:head>
 
     <ui:include src="header.xhtml"/>
-	<link type="text/css" rel="stylesheet" href="resources/css/style.css" />
+	<link type="text/css" rel="stylesheet" href="javax.faces.resource/css/style.css" />
     <ui:insert name="content" />
 
     <ui:include src="footer.xhtml"/>
