--- a/Lucene-Clustering/WebContent/masterTemplate.xhtml
+++ b/Lucene-Clustering/WebContent/masterTemplate.xhtml
@@ -8,7 +8,9 @@
     <h:head>
         <title>
             <ui:insert name="title">Default</ui:insert>
-        </title>        
+        </title>  
+        <script type="text/javascript" src="javax.faces.resource/jquery/jquery-1.11.1.min.js"></script>
+    	<script type="text/javascript" src="javax.faces.resource/jquery/jquery.dataTables.min.js"></script>      
     </h:head>
 
     <ui:include src="header.xhtml"/>
