--- a/Spielwiese/WebContent/masterTemplate.xhtml
+++ b/Spielwiese/WebContent/masterTemplate.xhtml
@@ -9,10 +9,13 @@
         <title>
             <ui:insert name="title">Default</ui:insert>
         </title>        
+    <script type="text/javascript" src="javax.faces.resource/jquery/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="javax.faces.resource/jquery/jquery.dataTables.min.js"></script>
     </h:head>
 
     <ui:include src="header.xhtml"/>
 	<link type="text/css" rel="stylesheet" href="javax.faces.resource/css/style.css" />
+
     <ui:insert name="content" />
 
     <ui:include src="footer.xhtml"/>
