--- a/Lucene-Clustering/WebContent/footer.xhtml
+++ b/Lucene-Clustering/WebContent/footer.xhtml
@@ -1,14 +1,38 @@
-
 <html lang="en"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets" 
 >
-		 <div id="footer">
-		 <br/>
-		 <hr />
-			
-        </div>
+
+	<script type="text/javascript" class="init">
+	$(document).ready(function() {
+		$('#table').DataTable({
+			"ordering": false,
+			"searching": false,
+			"language": {
+	            "lengthMenu": "_MENU_ Elemente pro Seite anzeigen",
+	            "zeroRecords": "Keine Einträge gefunden.",
+	            "info": "Seite _PAGE_ von _PAGES_",
+	            "infoEmpty": "Keine Einträge gefunden.",
+	            "infoFiltered": "(aus _MAX_ gesamten Einträgen)",
+	            "paginate": {
+		            first:      "Erste",
+		            previous:   "Vorherige",
+		            next:       "Nächste",
+		            last:       "Letzte"
+		        }
+	        },
+	        
+			}
+		);
+		
+	} );
+	</script>
+	
+	<div id="footer">
+	<br/>
+	<hr />
+    </div>
 
 </html>
